--- a/main_app/templates/youtuber_list.html
+++ b/main_app/templates/youtuber_list.html
@@ -12,7 +12,7 @@
     <div class="card">
       <div class="card-image">
         <figure class="image is-square">
-          <img src="{{youtuber.image}}" alt="{{youtuber.name}}" />
+          <img src="{{youtuber.img}}" alt="{{youtuber.name}}" />
         </figure>
       </div>
       <div class="card-header">
