--- a/main_app/templates/youtuber_list.html
+++ b/main_app/templates/youtuber_list.html
@@ -5,7 +5,23 @@
 
 {% block content %}
 
-<h1 class="title pt-5">Coding Youtubers</h1>
+<h1 class="title pt-5">{{header}}</h1>
+
+<!-- This is the search function -->
+<form class="mb-5" method="get">
+    <div class="field has-addons">
+      <div class="control">
+        <!--  Our input will search by name of artist  -->
+        <input class="input" type="text" name="name" placeholder="name" />
+      </div>
+      <div class="control">
+        <input class="button is-success" type="submit" value="Search" />
+      </div>
+    </div>
+    <!--  This anchor tag will redirect back to artist list without a query param -->
+    <a class="button is-dark" href="{% url 'youtuber_list' %}">Clear Search</a>
+  </form>
+
 <div class="gallery">
   {% for youtuber in youtubers %}
   <a href="">
