successfully added create button and page

--- a/main_app/templates/youtuber_list.html
+++ b/main_app/templates/youtuber_list.html
@@ -22,6 +22,8 @@
     <a class="button is-dark" href="{% url 'youtuber_list' %}">Clear Search</a>
   </form>
 
+    <a class="button is-dark" href="{% url 'youtuber_create' %}">Add Youtuber</a>
+
 <div class="gallery">
   {% for youtuber in youtubers %}
   <a href="">
