--- a/main_app/templates/youtuber_detail.html
+++ b/main_app/templates/youtuber_detail.html
@@ -16,17 +16,19 @@
 </div>
 <div class="detail__container">
     <div class="buttons">
-        <a href="" class="button is-info">
-            <span class="icon">
-                <i class="fas fa-edit"></i>
-            </span>
-        </a>
-        <a href="" class="button is-danger">
-            <span class="icon">
-                <i class="fas fa-trash-alt"></i>
-            </span>
-        </a>
-    </div>
+        <div class="buttons">
+    <!-- just like how we added the artist detail link we can do the same thing for update -->
+    <a href="{% url 'youtuber_update' youtuber.pk %}" class="button is-info"> Updates
+        <span class="icon">
+            <i class="fas fa-edit"></i>
+        </span>
+    </a>
+    <a href="" class="button is-danger">
+        <span class="icon">
+            <i class="fas fa-trash-alt"></i>
+        </span>
+    </a>
+</div>
     <div class="detail__about">
         <h4 class="title is-4">About</h4>
         <p>{{youtuber.bio}}</p>
