--- a/main_app/templates/youtuber_detail.html
+++ b/main_app/templates/youtuber_detail.html
@@ -23,7 +23,7 @@
             <i class="fas fa-edit"></i>
         </span>
     </a>
-    <a href="" class="button is-danger">
+    <a href="/youtubers/{{youtuber.id}}/delete" class="button is-danger">
         <span class="icon">
             <i class="fas fa-trash-alt"></i>
         </span>
